Reorganized the code and introduced a new folder called HR

--- a/BethanysPieShopHRM/BethanysPieShopHRM.csproj
+++ b/BethanysPieShopHRM/BethanysPieShopHRM.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="HR\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="HR\" />
+  </ItemGroup>
 </Project>
