Adding classes under accounting

--- a/BethanysPieShopHRM/BethanysPieShopHRM.csproj
+++ b/BethanysPieShopHRM/BethanysPieShopHRM.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <None Remove="HR\" />
+    <None Remove="Accounting\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="HR\" />
+    <Folder Include="Accounting\" />
   </ItemGroup>
 </Project>
