--- a/BethanysPieShopHRM/BethanysPieShopHRM.csproj
+++ b/BethanysPieShopHRM/BethanysPieShopHRM.csproj
@@ -15,4 +15,7 @@
     <Folder Include="HR\" />
     <Folder Include="Accounting\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
